--- a/badwinshop/templates/index.html
+++ b/badwinshop/templates/index.html
@@ -275,7 +275,7 @@
                 <a class="text-decoration-none" href="">
                     <div class="cat-item d-flex align-items-center mb-4">
                         <div class="overflow-hidden" style="width: 100px; height: 100px;">
-                            <img class="img-fluid" src="img/cat-1.jpg" alt="">
+                            <img class="img-fluid" src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhBMd0ISBf73-jNuqHkg0wKyH1wZNtZH_key086YqCk475PiH4c8oXpbmeZF63Jza7iSa-ylLcDq9C_31pLIKZhHIdqmoRCaudPmmQCp4oyO_-2VK4o0T4y61JsR3_IG25NKegvq7MR-TNvosO0ENnO6dV7W20VIGGpFXnH0MQQPsem49eWoxfjrICl7A/s280/Screenshot_20230127-171519_Chrome.jpg" alt="">
                         </div>
                         <div class="flex-fill pl-3">
                             <h6>Category Name</h6>
