--- a/badwinshop/templates/index.html
+++ b/badwinshop/templates/index.html
@@ -25,7 +25,7 @@
     <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
 
     <!-- Customized Bootstrap Stylesheet -->
-    <link href="https://github.com/benniebadwinn/badwin2/blob/main/badwinshop/templates/css/style.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 </head>
 <form=
 <body>
